# lidar-detection

./: CMakeLists.txt  README.md  package.xml
src/node_template/: node.cpp
src/pcl_bounding_box/: bounding_box.cpp  bounding_box.hpp  node.cpp
src/pcl_cluster_extraction/: cluster_extraction.cpp  cluster_extraction.hpp  node.cpp
src/pcl_ground_removal/: ground_removal.cpp  ground_removal.hpp  node.cpp
src/pcl_preprocessor/: filter.cpp  filter.hpp  node.cpp
